--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <button type="button" class="tv-extra">TV추가</button>
       </div>
       <div class="notice-box">
-        인터넷+TV 2대 사용이시거나 TV만 신청하신 고객님은<br>
+        인터넷+TV 2대 신청이시거나 TV만 신청하신 고객님은<br>
         반드시 <span style="color:#0077c2;font-weight:bold;">‘인터넷+TV’</span>와 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span> 버튼을 함께 선택해주세요.<br>
         TV만 신청하실 경우 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span>만 선택하셔도 접수 가능합니다.
       </div>
