--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 </head>
 <body>
   <div class="container">
-    <form method="POST" enctype="application/x-www-form-urlencoded"
-      action="https://script.google.com/macros/s/AKfycbySvPtK5XZFumiAjLiH6Pat5qqFFdsJ83fnHUz9Ncbn4IJKX7PJdmLdfPntOvpz8XQu/exec">
+    <form id="applicationForm" autocomplete="off">
       <input type="hidden" name="폼구분" value="v2" />
       <input type="hidden" name="carrier" id="carrier" />
       <input type="hidden" name="product" id="product" />
@@ -101,7 +100,7 @@
         <div class="review-slide"><img src="review5.png.png" alt="후기 5" /></div>
       </div>
 
-      <h2 style="font-size: 24px; font-weight: bold; text-align: center; margin-bottom: 10px; color: #0077c2;">💬 실시간 상담 현황2</h2>
+      <h2 style="font-size: 24px; font-weight: bold; text-align: center; margin-bottom: 10px; color: #0077c2;">💬 실시간 상담 현황</h2>
       <div class="realtime">
         <div class="realtime-inner">
           <table>
@@ -157,7 +156,7 @@
       <div class="info-banner">⏰ 24시간 연중무휴! 지금 접수하시면 바로 상담 연결됩니다.</div>
 
       <div class="form-field">
-        <select name="time">
+        <select name="time" id="time">
           <option value="">상담시간 선택 (10시~22시)</option>
           <option>10시</option><option>11시</option><option>12시</option>
           <option>13시</option><option>14시</option><option>15시</option>
@@ -182,11 +181,11 @@
 
   <script>
     // ===== Airtable 연동 정보 [수정: 본인 정보 입력] =====
-    const AIRTABLE_TOKEN = "YOUR_AIRTABLE_TOKEN"; // [수정] 본인 토큰
-    const AIRTABLE_BASE_ID = "appCRfI2EJrLQJYBL"; // [수정] Base ID
-    const AIRTABLE_TABLE_NAME = "당일민족1"; // [수정] 테이블명
+    const AIRTABLE_TOKEN = "patsLgTBSt5CorHUB.5bb3ba67450d67ac9da759726724d4c3af2d3b8534c9b9aa595a331d382fba3b";
+    const AIRTABLE_BASE_ID = "appCRfI2EJrLQJYBL";
+    const AIRTABLE_TABLE_NAME = "당일민족1";
 
-    // 실시간 상담 현황 Airtable 연동 [수정]
+    // 실시간 상담 현황 Airtable 연동
     const statusOptions = ["상담예약", "상담중", "설치예약", "입금완료"];
     const statusLabel = {
       "상담예약": "🔴 상담예약",
@@ -277,17 +276,7 @@
     fetchDataAirtable();
     setInterval(fetchDataAirtable, 15000);
 
-    // [추가] SNS 문자 전송(예시, 실제 구현은 서버 연동 필요)
-    async function sendSms(phone, msg) {
-      // 실제 사용시 아래 fetch를 본인 SENS 서버로 수정
-      await fetch("YOUR_SENS_API_ENDPOINT", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ to: phone, msg: msg })
-      });
-    }
-
-    // 기존 버튼 처리 & 입력 검증
+    // 기존 버튼 처리 & 입력 검증 및 Airtable 신청 연동
     document.addEventListener("DOMContentLoaded", function () {
       // 복수선택: 부가상품(multi), TV추가(tv-extra)
       document.querySelectorAll(".btn-group button").forEach(btn => {
@@ -309,8 +298,9 @@
         });
       });
 
-      const form = document.querySelector("form");
-      form.addEventListener("submit", function (e) {
+      const form = document.getElementById("applicationForm");
+      form.addEventListener("submit", async function (e) {
+        e.preventDefault(); // 기본 전송 중단
         const name = document.getElementById("name").value.trim();
         const phone = document.getElementById("phone").value.trim();
         const carrierBtn = document.querySelector('#carrier-group button.active');
@@ -319,10 +309,11 @@
         // TV추가 복수선택
         const tvExtraBtn = document.querySelector('#product-group button.tv-extra.active');
         const agreeChecked = form.querySelector('input[type="checkbox"]:checked');
+        const time = document.getElementById("time").value;
+
         // 필수 검증: 상품에서 TV추가만 단독 선택도 가능
         if (!name || !phone || !carrierBtn || (!productBtn && !tvExtraBtn) || !agreeChecked) {
           alert("성함, 연락처, 통신사, 상품 선택, 개인정보 동의를 모두 입력해주세요.\n(상품은 TV추가만 선택해도 접수 가능합니다)");
-          e.preventDefault(); // 전송 중단
           return;
         }
         document.getElementById("carrier").value = carrierBtn.textContent;
@@ -331,8 +322,45 @@
         const addonBtns = document.querySelectorAll('#addons-group button.active');
         document.getElementById("addons").value = Array.from(addonBtns).map(btn => btn.textContent).join(',');
 
-        // [추가] 상담 신청시 SNS 문자 발송 예시 (필요 시 주석 해제)
-        // sendSms(phone, `[당일민족] ${name}님, 상담신청이 접수되었습니다.`); 
+        // Airtable에 데이터 전송
+        const payload = {
+          fields: {
+            "접수일자": new Date().toISOString().slice(0, 19).replace('T', ' '),
+            "고객명": name,
+            "연락처": phone,
+            "통신사": carrierBtn.textContent,
+            "상품": productBtn ? productBtn.textContent : "",
+            "부가상품": Array.from(addonBtns).map(btn => btn.textContent).join(','),
+            "상담시간": time,
+            "진행상황": "상담예약",
+            "TV추가": tvExtraBtn ? "TV추가" : ""
+          }
+        };
+
+        try {
+          const res = await fetch(
+            `https://api.airtable.com/v0/${AIRTABLE_BASE_ID}/${encodeURIComponent(AIRTABLE_TABLE_NAME)}`,
+            {
+              method: "POST",
+              headers: {
+                Authorization: "Bearer " + AIRTABLE_TOKEN,
+                "Content-Type": "application/json"
+              },
+              body: JSON.stringify(payload)
+            }
+          );
+          if (res.ok) {
+            alert("상담 신청이 정상적으로 접수되었습니다!");
+            form.reset();
+            // 버튼 active 초기화
+            document.querySelectorAll(".btn-group button.active").forEach(btn=>btn.classList.remove("active"));
+            fetchDataAirtable();
+          } else {
+            alert("접수 중 오류가 발생했습니다. 다시 시도해 주세요.");
+          }
+        } catch {
+          alert("접수 중 네트워크 오류가 발생했습니다.");
+        }
       });
     });
   </script>
